--- a/src/app/blog/[slug]/singlePost.module.css
+++ b/src/app/blog/[slug]/singlePost.module.css
@@ -6,7 +6,7 @@
 .imgContainer {
   flex: 1;
   position: relative;
-  height: calc(100vh-200px);
+  height: calc(100vh - 200px);
 }
 
 .textContainer {
@@ -24,11 +24,6 @@
   display: flex;
 
   gap: 20px;
-}
-
-.avatar {
-  object-fit: cover;
-  border-radius: 50%;
 }
 
 .detailText {
